not sure pero sana ok na ito

--- a/server.cfg
+++ b/server.cfg
@@ -1,27 +1,26 @@
 echo Executing Server Config...
 lanmode 0
-rcon_password feb2020toapril
+hostname Tres Islas Reality Roleplay
+weburl www.ac-rp.net
+mapname San Andreas
+language Filipino/English
 password 
+rcon_password cfvjmc3k
 maxplayers 200
 port 7777
-hostname Tres Islas Reality Roleplay
-gamemode0 main
-filterscripts 
-plugins pawncmd.so sampvoice.so sscanf.so streamer.so mysql_static.so Whirlpool.so SKY.so nativechecker.so
-discord_bot_token 
+rcon 0
 announce 1
-chatlogging 1
-weburl www.tirrp.com
+query 1
+lagcompmode 1
+messageholelimit 3000
+messageslimit 500
+ackslimit 3000
+useartwork 1
+gamemode0 main
+filterscripts
+plugins crashdetect.so whirlpool.so pawncmd.so SKY.so sscanf.so streamer.so mysql_static.so nativechecker.so sampvoice.so
+maxnpc 0
 onfoot_rate 40
 incar_rate 40
 weapon_rate 40
 stream_distance 300.0
-stream_rate 1500
-maxnpc 0
-logtimeformat [%H:%M:%S]
-language English
-ackslimit 10000
-profile_gamemode 1
-profile_format html
-useartwork 1
-query 1
