Fix SQL user at pass

--- a/server.cfg
+++ b/server.cfg
@@ -3,10 +3,10 @@ lanmode 0
 rcon_password mcrp2022
 maxplayers 100
 port 7777
-hostname Morgan City Roleplay
+hostname Morgan City Roleplay 
 gamemode0 v2morgancity 1
 filterscripts
-plugins crashdetect pawncmd sampvoice sscanf streamer mysql Whirlpool SKY nativechecker
+plugins crashdetect.so pawncmd.so sampvoice.so sscanf.so streamer.so mysql_static.so Whirlpool.so SKY.so nativechecker.so
 discord_bot_token OTgzNzE5ODg3MDMxNjM1OTg4.GAnd8_.Bvd7PyphT3d6jnIz51ljpcw58g2ffYFDvhUlx0
 announce 1
 chatlogging 1
