discord (in attempt to fix)

--- a/server.cfg
+++ b/server.cfg
@@ -6,8 +6,8 @@ port 7777
 hostname Morgan City Roleplay 
 gamemode0 v2morgancity 1
 filterscripts
-plugins crashdetect pawncmd sampvoice sscanf streamer.so mysql Whirlpool SKY nativechecker
-discord_bot_token OTgzNzE5ODg3MDMxNjM1OTg4.GAnd8_.Bvd7PyphT3d6jnIz51ljpcw58g2ffYFDvhUlx0
+plugins crashdetect pawncmd sampvoice sscanf discord-connector streamer mysql Whirlpool SKY nativechecker
+discord_bot_token OTk0MTY1OTMxNTY5ODU2NTUy.GL-y7q.dlUHgYwWBb-0a36HA7mdYedBrl12WM5ssgOtqY
 announce 1
 chatlogging 1
 weburl
