--- a/server.cfg
+++ b/server.cfg
@@ -6,7 +6,7 @@ port 7777
 hostname Morgan City Roleplay 
 gamemode0 v2morgancity 1
 filterscripts
-plugins crashdetect pawncmd sampvoice sscanf discord-connector streamer mysql Whirlpool SKY nativechecker
+plugins crashdetect pawncmd sampvoice sscanf discord-connector mysql streamer Whirlpool SKY nativechecker
 discord_bot_token OTk0MTY1OTMxNTY5ODU2NTUy.GL-y7q.dlUHgYwWBb-0a36HA7mdYedBrl12WM5ssgOtqY
 announce 1
 chatlogging 1
