--- a/server.cfg
+++ b/server.cfg
@@ -5,7 +5,7 @@ maxplayers 100
 port 7777
 hostname Morgan City Roleplay 
 gamemode0 v2morgancity 1
-filterscripts
+filterscripts yom_buttons
 plugins crashdetect pawncmd sampvoice sscanf discord-connector mysql streamer Whirlpool SKY nativechecker
 discord_bot_token OTk0MTY1OTMxNTY5ODU2NTUy.GL-y7q.dlUHgYwWBb-0a36HA7mdYedBrl12WM5ssgOtqY
 announce 1
