change of disc token + disc logs & verify

--- a/server.cfg
+++ b/server.cfg
@@ -7,7 +7,7 @@ hostname Morgan City Roleplay
 gamemode0 v2morgancity 1
 filterscripts yom_buttons
 plugins crashdetect pawncmd sampvoice sscanf discord-connector mysql streamer Whirlpool SKY nativechecker
-discord_bot_token OTk0MTY1OTMxNTY5ODU2NTUy.GL-y7q.dlUHgYwWBb-0a36HA7mdYedBrl12WM5ssgOtqY
+discord_bot_token OTk0MTY1OTMxNTY5ODU2NTUy.GE9qP2.jrD_jrzf9rqj0NMavm0nFNL5uN6rt63ga-R3O0
 announce 1
 chatlogging 1
 weburl
